--- a/MiRadio-Startup/Views/Comentarios/Details.cshtml
+++ b/MiRadio-Startup/Views/Comentarios/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MiRadio_Startup.Models.Comentario
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalles";
 }
 
-<h1>Details</h1>
+<h1>Detalles</h1>
 
 <div>
     <h4>Comentario</h4>
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdComentario">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.IdComentario">Editar</a> |
+    <a asp-action="Index">Volver Atras</a>
 </div>
