--- a/MiRadio-Startup/Views/Comentarios/Create.cshtml
+++ b/MiRadio-Startup/Views/Comentarios/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MiRadio_Startup.Models.Comentario
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear";
 }
 
-<h1>Create</h1>
+<h1>Crear</h1>
 
 <h4>Comentario</h4>
 <hr />
@@ -35,14 +35,14 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver atras</a>
 </div>
 
 @section Scripts {
