--- a/MiRadio-Startup/Views/Comentarios/Delete.cshtml
+++ b/MiRadio-Startup/Views/Comentarios/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MiRadio_Startup.Models.Comentario
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Esta seguro que quiere eliminar?</h3>
 <div>
     <h4>Comentario</h4>
     <hr />
@@ -40,6 +40,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdComentario" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Volver Atras</a>
     </form>
 </div>
