--- a/MiRadio-Startup/Views/Home/Index.cshtml
+++ b/MiRadio-Startup/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-12">BIENVENIDO</h1>
+    <p class="lead">Esta página está dedicada a la música y más.</p>
 </div>
