--- a/MiRadio-Startup/Views/Musicas/Delete.cshtml
+++ b/MiRadio-Startup/Views/Musicas/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MiRadio_Startup.Models.Musica
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Estas seguro de que quieres eliminar?</h3>
 <div>
     <h4>Musica</h4>
     <hr />
@@ -51,7 +51,7 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdMusica" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index" class="btn btn-primary">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a asp-action="Index" class="btn btn-primary">Volver Atras</a>
     </form>
 </div>
