--- a/MiRadio-Startup/Views/Usuarios/Create.cshtml
+++ b/MiRadio-Startup/Views/Usuarios/Create.cshtml
@@ -42,13 +42,13 @@
                 <span asp-validation-for="Rol" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver Atras</a>
 </div>
 
