--- a/MiRadio-Startup/Views/Comentarios/Index.cshtml
+++ b/MiRadio-Startup/Views/Comentarios/Index.cshtml
@@ -5,6 +5,27 @@
 }
 
 <h1>Comentarios</h1>
+<style>
+    body {
+        background-image: url('imagenes/imagen17.webp');
+        background-size: cover; /* Ajusta la imagen al tamaño del contenedor */
+        background-repeat: no-repeat; /* Evita que la imagen se repita */
+        color: white; /* Color del texto */
+        font-family: Arial, sans-serif; /* Fuente del texto */
+        margin: 0; /* Elimina los márgenes predeterminados */
+        padding: 0; /* Elimina el relleno predeterminado */
+    }
+
+    h1, p, a {
+        color: lightblue; /* Color celeste claro para los encabezados, párrafos y enlaces */
+    }
+
+    /* Estilos adicionales para los enlaces */
+    a {
+        text-decoration: none; /* Elimina el subrayado predeterminado */
+    }
+   
+</style>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">Crear Nuevo</a>
