--- a/MiRadio-Startup/Views/Home/Index.cshtml
+++ b/MiRadio-Startup/Views/Home/Index.cshtml
@@ -2,7 +2,37 @@
     ViewData["Title"] = "Home Page";
 }
 
+
+<style>
+    body {
+        background-image: url('/imagenes/imagen3.jpg');
+        background-size: cover; 
+        background-position: center; /* Centra la imagen */
+        background-color: #4FC3F7; /* Color celeste fuerte */
+        
+}
+
+    .text-center {
+        text-align: center;
+        color: #4FC3F7; /* Color de texto blanco para resaltar */
+    }
+
+    .display-12 {
+        font-size: 3.5em; /* Tamaño de la fuente para el título */
+        font-weight: bold; /* Negrita para el título */
+        text-transform: uppercase; /* Texto en mayúsculas */
+        font-style: italic; /* Estilo cursiva */
+        font-family: 'Times New Roman', serif; /* Cambia la fuente del título */
+    }
+
+    .lead {
+        font-size: 1.5em; /* Tamaño de la fuente para el texto lead */
+        font-style: italic; /* Estilo cursiva para el texto lead */
+        font-family: 'Georgia', serif; /* Cambia la fuente del texto lead */
+    }
+</style>
+
 <div class="text-center">
-    <h1 class="display-12">BIENVENIDO</h1>
+    <h1 class="display-12">BIENVENIDO A TU RADIO-STARTUP</h1>
     <p class="lead">Esta página está dedicada a la música y más.</p>
 </div>
