--- a/MiRadio-Startup/Views/Musicas/Details.cshtml
+++ b/MiRadio-Startup/Views/Musicas/Details.cshtml
@@ -1,8 +1,20 @@
 ﻿@model MiRadio_Startup.Models.Musica
 
+
+
 @{
     ViewData["Title"] = "Detalles";
+
 }
+<style>
+    body {
+        background-image: url('/imagenes/imagen16.jpg');
+        background-size: cover; /* Ajusta el tamaño para cubrir toda la pantalla */
+        background-position: center; /* Centra la imagen */
+    }
+</style>
+
+
 
 <h1>Detalles de Música</h1>
 
