--- a/MiRadio-Startup/Views/Musicas/Index.cshtml
+++ b/MiRadio-Startup/Views/Musicas/Index.cshtml
@@ -58,6 +58,12 @@
 </table>
 
 <style>
+    body {
+        background-image: url('/imagenes/imagen8.jpg'); /* tu imagen */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
     /* Estilos para la tabla con bordes y colores */
     .bordered-table th,
     .bordered-table td {
