--- a/MiRadio-Startup/Views/Usuarios/Index.cshtml
+++ b/MiRadio-Startup/Views/Usuarios/Index.cshtml
@@ -68,6 +68,15 @@
 
 <!-- Estilos CSS añadidos para mejorar los bordes y colores de la tabla -->
 <style>
+
+    body {
+        background-image: url('/imagenes/imagen9.jpg');
+        background-size: cover; /* Asegura que la imagen cubra todo el fondo */
+        background-position: center; /* Centra la imagen en el fondo */
+        background-repeat: no-repeat; /* Evita que la imagen se repita */
+        color: blue; /* Color de texto blanco para mejor visibilidad */
+    }
+
     /* Estilos para la tabla de usuarios */
     .bordered-table th, .bordered-table td {
         border: 2px solid #007bff; /* Color de borde primario */
