--- a/MiRadio-Startup/Views/Comentarios/Edit.cshtml
+++ b/MiRadio-Startup/Views/Comentarios/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Editar";
+
 }
 
 <style>
@@ -17,8 +18,15 @@
             border-color: #0056b3; /* Color azul más oscuro al enfocar */
             box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); /* Efecto de enfoque de Bootstrap */
         }
-</style>
 
+  
+</style>
+ body {
+        background-image: url('imagenes/imagen6.jpg'); /* Reemplaza con la ruta de tu imagen */
+        background-size: cover; /* Ajusta el tamaño para cubrir todo el fondo */
+        background-repeat: no-repeat; /* Evita que se repita la imagen */
+        background-attachment: fixed; /* Fija la imagen de fondo al desplazar */
+    }
 <h1>Editar Comentario</h1>
 
 <h4>Comentario</h4>
